# layerlex

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_0001_foundation.py  20260714_0002_create_flashcard_tables.py  20260717_0003_add_decks.py
backend/app/: __init__.py  main.py
backend/app/api/: errors.py  router.py
backend/app/api/routes/: decks.py  health.py  inner_cards.py  outer_cards.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  card.py  types.py
backend/app/schemas/: deck.py  health.py  inner_card.py  outer_card.py  validation.py
backend/tests/: conftest.py  test_database.py  test_decks_api.py  test_global_inner_cards_api.py  test_health.py  test_inner_cards_api.py  test_migrations.py  test_models.py  test_outer_cards_api.py
docs/: architecture.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
frontend/src/components/: BilingualSpeechControls.test.tsx  BilingualSpeechControls.tsx  ContinuousListeningControls.test.tsx  ContinuousListeningControls.tsx  DeckDirectory.tsx  DeckForm.tsx  InnerCardDetail.tsx  InnerCardDirectory.tsx  InnerCardForm.tsx  InnerCardsManager.tsx  InnerReviewCard.tsx  InnerReviewDirectory.tsx  OuterCardDetail.tsx  OuterCardDirectory.tsx  OuterCardForm.tsx  OuterReviewCard.tsx  OuterReviewDirectory.tsx  OuterReviewInnerContent.tsx  ReviewKeyboardHelp.tsx
frontend/src/lib/: api.ts  decks.ts  (+23 more)
(+11 files in other folders)
